<resources>
    <string name="appName">SilentMoon</string>
    <string name="silentAppName">Silent</string>
    <string name="moonAppName">Moon</string>
    <string name="appDescriptionTitle">We are what we do</string>
    <string name="appDescriptionText">Thousands of people are using silent moon for small meditations </string>
    <string name="signUp">Sign up</string>
    <string name="alreadyHaveAnAccount">Already have an account? Log in</string>
    <string name="logInText">Log in</string>
    <string name="welcomeBack">Welcome Back!</string>
    <string name="continueWithFacebook">Continue with Facebook</string>
    <string name="continueWithGoogle">Continue with Google⠀⠀⠀</string>
    <string name="orLogInWithEmail">Or log in with email</string>
    <string name="emailAddressHint">Email address</string>
    <string name="passwordHint">Password</string>
    <string name="nameHint">Name</string>
    <string name="noAccount">No account? Sign up</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="createYourAccount">Create your account</string>
    <string name="orSignUpWithEmail">Or sign up with email</string>
    <string name="iHaveReadThePrivacyPolicy">I have read the privacy policy</string>
    <string name="privacyPolicy">privacy policy</string>
    <string name="privacyPolicyText">Тут будет политика конфиденциальности</string>
    <string name="getStarted">Get started</string>
    <string name="welcomeGreetingsText">Hi %1$s, Welcome\n to Silent Moon</string>
    <string name="welcomeGreetingsTextShort">Hi %1$s, Welcome\n</string>
    <string name="welcomeGreetingsPlaceholderText">Hi Afsar, Welcome to Silent Moon</string>
    <string name="welcomeText">Explore the app, Find some peace of mind to prepare for meditation.</string>
    <string name="chooseTopicTitle">What Brings you \nto Silent Moon?</string>
    <string name="chooseTopicTitleBoldPart">What Brings you</string>
    <string name="chooseTopicText">choose a topic to focus on:</string>

    <string name="topicReduceStress">Reduce Stress</string>
    <string name="topicImprovePerformance">Improve Performance</string>
    <string name="topicIncreaseHappiness">Increase Happiness</string>
    <string name="topicReduceAnxiety">Reduce Anxiety</string>
    <string name="topicPersonalGrowth">Personal Growth</string>
    <string name="topicBetterSleep">Better Sleep</string>
    <string name="topicManageTime">Manage Time</string>
    <string name="topicIncreaseProductivity">Increase Productivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>