<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.SignInFragment">

    <ImageView
        android:id="@+id/backgroundShape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="top"
        android:scaleType="fitXY"
        android:src="@drawable/sign_in_bg_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:text="@string/welcomeBack"
        android:textAppearance="@style/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logInFacebook"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/padding_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/continueWithFacebook"
        android:textColor="@color/whiteGray"
        android:textAppearance="@style/onButtonText"
        android:backgroundTint="@color/facebookBg"
        android:drawableLeft="@drawable/facebook_logo"
        android:paddingLeft="29dp"
        app:cornerRadius="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeBack"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <Button
        android:id="@+id/logInGoogle"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/padding_medium"
        android:backgroundTint="@android:color/transparent"
        android:drawableLeft="@drawable/google_logo"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="29dp"
        android:text="@string/continueWithGoogle"
        android:textAppearance="@style/onButtonText"
        android:textColor="@color/darkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInFacebook"
        app:strokeColor="@color/googleGray"
        app:strokeWidth="1dp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/orLogInWithEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:text="@string/orLogInWithEmail"
        android:textAppearance="@style/labelText"
        android:textColor="@color/lightGray"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInGoogle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/padding_medium"
        android:textColorHint="@color/lightGray"
        app:boxBackgroundColor="#F2F3F7"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orLogInWithEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/emailAddressHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/padding_medium"
        android:textColorHint="@color/lightGray"
        app:boxBackgroundColor="#F2F3F7"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/passwordHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/padding_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/logInText"
        android:textAppearance="@style/onButtonText"
        android:textColor="@color/whiteGray"
        app:cornerRadius="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_medium"
            android:gravity="center"
            android:text="@string/forgotPassword"
            android:textAppearance="@style/labelText"
            android:textColorHighlight="#00FFFFFF" />

        <TextView
            android:id="@+id/noAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_32"
            android:gravity="center"
            android:text="@string/noAccount"
            android:textAllCaps="true"
            android:textAppearance="@style/labelText"
            android:textColor="@color/lightGray"
            android:textColorHighlight="#00FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>